# MessengerBackend

./: .env.example  .gitignore  Cargo.toml  README.md  api.yaml  create_db.sh  db.sql  fill_db.py  requirements.txt
src/: auth.rs  handlers.rs  main.rs  models.rs  requests.rs  responses.rs  routes.rs
