[package]
name = "MessengerBackend"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
hex = "0.4.3"
redis = { version = "1.0.2", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0-rc.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
